routing from home page to login, then register created; if user selects dashboard they are routed to log in, from log in they can select register to then be directed to a form to register

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </nav>
     </div>
     <div class="container card-container">
-        <div class="row">
-            <div class="col">
+        <div class="row justify-content-center">
+            <div class="col-6">
                 <div class="all-card">
                     <h5 class="cust-card-header text-center">Already have an account? Sign In!</h5>
                     <div class="card-body custom-body">
@@ -48,14 +48,18 @@
                             </div>
 
                             <button type="submit" class="btn custom-btn">Log In</button>
+                
+                                <a href='/register'><span class="register">New to the site?  Click here to register</span></a>
+            
 
                         </form>
 
                     </div>
                 </div>
             </div>
-
-            <div class="col">
+            <div class="container card-container">
+                <div class="row justify-content-center">
+            <div class="col-6">
                 <div class="all-card">
                     <h5 class="cust-card-header text-center">New member?  Register here!</h5>
                     <div class="card-body custom-body">
